# judgement

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  3.24-修改.md  3.28readme.md  AGENTS.md  Dockerfile  README.md  alembic.ini  commands.txt  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
alembic/: env.py  script.py.mako
backend/: config.py  database.py  logging_config.py  main.py  models.py  schemas.py
backend/middleware/: access_log.py  error_handler.py  request_id.py
backend/routers/: export.py  grade_cards.py  health.py  judge.py  metrics.py  provider.py  question_bank.py  upload.py
backend/services/: __init__.py  cleanup.py  doc_parser.py  document_importer.py  encryption.py  grading.py  http_client.py  llm_client.py  llm_metrics.py  question_matcher.py  text_utils.py
backend/services/providers/: __init__.py  ark.py  base.py  openai_compat.py
backend/utils/: image.py  latex.py
docs/: architecture-proposal.md
docs/ref/: 国内模型收费标准.md
docs/reply/: 需求规格说明书.md
docs/request/: 彭の要求.md
docs/superpowers/plans/: test.txt
frontend/: bank.html  index.html  settings.html
frontend/static/css/: style.css
frontend/static/js/: app.js  bank.js  settings.js
test/: conftest.py  test_batch_judge.py  test_cleanup.py  test_export.py  test_frontend_contracts.py  test_health.py  test_health_endpoints.py  test_http_client.py  test_llm_metrics.py  test_llm_resilience.py  test_logging.py  test_metrics.py  test_middleware.py  test_question_bank.py  test_question_matcher.py  test_upload_validation.py
